PostGIS 3.0.2
2020/XX/XX

* Bug Fixes and Enhancements *
  - #4652, Fix several memory related bugs in ST_GeomFromGML



PostGIS 3.0.1
2020/02/20

* Breaking Changes *
  - #4637 svn number replaced by git hash in version output
    (Sandro Santilli, Regina Obe, Bas Couwenberg)

* New Features *
 - #4617, Add configure switch `--without-phony-revision` (Raúl Marín)
          Use to prevent postgis_revision.h from rebuilding
          (when building from tar ball) and building in a gitted folder.

* Bug Fixes and Enhancements *
  - #4558, Fix oversimplification of polygon inner rings (Raúl Marín)
  - #4588, Fix update when ST_Union(geometry) doesn't exist (Raúl Marín)
  - #4590, Fix pg_upgrade issue with ST_LineCrossingDirection (Raúl Marín)
  - #4599, ST_AddPoint: Accept -1 as a valid position (Raúl Marín)
  - #4600, Improve precision of ST_TileEnvelope (Raúl Marín)
  - #4605, Fix postgis_upgrade.pl with PostgreSQL 12 (Matti Linnanvuori)
  - #4606, Respect user's LDFLAGS in postgis module build (Sandro Santilli)
  - #4610, Add in logic to install postgis_tiger_geocoder from unpackaged (Regina Obe)
  - #4581, Installing postgis_raster from unpackaged tries to use wrong schema (Regina Obe)
  - #4596, The script to generate nation_script_load.sh is missing
           a trailing quote (Bill Mill)
  - #4608, PG12: Fix several bugs in the index support function (Raúl Marín)
  - #4621, Prevent stack overflow when parsing WKB (Raúl Marín)
  - #4626, Support pkg-config for libxml2 (Bas Couwenberg)
  - #4632, Allow building with PostgreSQL 13 (Raúl Marín)
  - #4570, Include raster2pgsql in windows packaging (Regina Obe)


PostGIS 3.0.0
2019/10/20

This version requires PostgreSQL 9.5+-12 and GEOS >= 3.6+
Additional features enabled if you are running Proj6+, PostgreSQL 12
and GEOS 3.8.0

* Breaking Changes *
  - #4267, Bump minimum GEOS version to 3.6 (Regina Obe, Darafei Praliaskouski)
  - #3888, Raster support now available as a separate extension